--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "music-player",
   "version": "1.0.0",
-  "description": "```bash\r $ npm install\r $ npm start\r ```",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "node index.js",
+    "serve": "nodemon",
     "client": "browser-sync start --server client --files \"client/**/*.html, client/**/*.js, client/**/*.css\" --no-notify"
   },
   "keywords": [
@@ -23,7 +23,10 @@
     "xtemplate": "^4.5.1",
     "xtpl": "^3.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "browser-sync": "^2.13.0",
+    "nodemon": "^1.9.2"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/zce/music-player.git"
